--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div class="red-box"></div>
-  </header>
-  <main>
-    <div class="green-box"></div>
-    <div class="blue-box"></div>
-  </main>
-  <footer>
-    <div class="yellow-box"></div>
-  </footer>
+  <div class="all">
+    <header>
+      <div class="red-box"></div>
+    </header>
+    <main class="cleafix">
+      <div class="green-box"></div>
+      <div class="blue-box"></div>
+    </main>
+    <footer>
+      <div class="yellow-box"></div>
+    </footer>
+  </div>
 </body>
 </html>
